--- a/views/index.pug
+++ b/views/index.pug
@@ -7,5 +7,6 @@ block content
   .row
   each post in posts
     .col-lg-4
-      h2= post.title
+      h2(data-id=post.id)= post.title
+      input.post__edit-title(data-id=post.id, type='text', name='edit-title', value=post.title).h2
   
